# pico-sdio-example

./: README.md
src/: CMakeLists.txt
src/SdFat/src/: SdFatConfig.h
src/SdFat/src/SdCard/: CMakeLists.txt  SdCard.h  SdSpiCard.cpp  SdSpiCard.h
src/SdFat/src/common/: FsBlockDevice.h
src/bench/: CMakeLists.txt  bench.cpp
src/sdio/: CMakeLists.txt  sd_card_sdio.cpp  sdio.cpp  sdio.h  sdio.pio
